--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       
       <i class="uil uil-bars navOpenBtn"></i>
       
-      <img src="https://i.ibb.co/y48hmtv/ger.png" align="left" alt="ger"  width="10%" heigth="8%" border="0">
+      <img src="https://i.ibb.co/y48hmtv/ger.png" align="left" alt="ger" class="title" width="10%" heigth="8%" border="0">
 
       <ul class="nav-links">
         <i class="uil uil-times navCloseBtn"></i>
