--- a/index.html
+++ b/index.html
@@ -328,19 +328,19 @@
 
   <tr style="text-align: left;padding: 8px;">
     <td></td>
-    <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="bit.ly/prajwalbarlaya" target="_blank">Know more</a></td>
+    <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="http://bit.ly/prajwalbarlaya" target="_blank">Know more</a></td>
     <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="placements.html" target="_blank">Placement Cell</a></td>
   </tr>
 
   <tr style="text-align: left;padding: 8px;">
     <td></td>
-    <td style="text-align: center;color: #ddd;font-size: small;padding:1%;">Free Education</td>
+    <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="https://pdfhost.io/v/GBnV3JxYR_Doc1" target="_blank" class="button">Hostel Facility</a></td>
     <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="placements.html" target="_blank">Placements @ 2023</a></td>
   </tr>
  
   <tr style="text-align: left;padding: 8px;">
    <td></td> 
-   <td style="text-align: center;color: #ddd;font-size: small;padding:1%;">Hostel Facility</td>
+   <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="https://pdfhost.io/v/hDphZXbDc_Microsoft_Word_Doc1" target="_blank" class="button">Education</a></td>
     <td style="text-align: center;color: #ddd;font-size: small;padding:1%;"><a href="placements.html" target="_blank">Companies Visited</a></td>
   </tr>
 
