--- a/placements.html
+++ b/placements.html
@@ -21,6 +21,7 @@
         background:rgb(116, 169, 35);
         color:rgb(121, 85, 85);
         text-align:center;
+       width:100%;
 
     }
     .happy{
@@ -28,6 +29,7 @@
         background:rgb(85, 118, 151);
         color:rgb(113, 70, 44);
         text-align:center;
+       width:100%:
 
     }
     .ENDING{
@@ -35,31 +37,34 @@
         background:rgb(204, 173, 197);
         color:rgb(27, 38, 30);
         text-align:center;
+       width:100%:
 
     }
     .space{
         font-size:5px;
         background:rgb(175, 170, 174);
-       
-        
-
+       width:100%;
     }
     .hell{
         background:peachpuff;
         color:peachpuff;
+       width:100%:
     }
     .hiii{
         background:lightgrey;
         color:lightgrey;
+       width:100%;
     }
     .app{
         background:lightskyblue;
         color:brown;
         font-size:30px;
+       width:100%;
     }
     .lasstyy{
         background:black;
         color:white;
+       width:100%;
     }
     @media (max-width:767px){
             html{
